pls work i want sleep

--- a/rotator/build.gradle
+++ b/rotator/build.gradle
@@ -1,12 +1,58 @@
 plugins {
   id 'java'
-  id 'com.jfrog.bintray'
+  id 'groovy'
+  id 'org.sonarqube'
   id 'maven-publish'
+  id 'com.jfrog.bintray'
 }
 
 ext.moduleName = 'lavaplayer-ext-youtube-rotator'
 version = '0.2.3'
 
+repositories {
+  maven {
+    // Only used for tests
+    url 'https://dl.bintray.com/sedmelluq/com.sedmelluq'
+  }
+}
+
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
+
 dependencies {
   compile group: 'com.github.Walkyst', name: 'lavaplayer-fork', version: '03e085f64f'
 }
+
+jar {
+  exclude("natives")
+}
+
+task updateVersion {
+  new File("$projectDir/src/main/resources/com/sedmelluq/discord/lavaplayer/tools/version.txt").with {
+    it.parentFile.mkdirs()
+    it.text = version
+  }
+}
+
+classes.finalizedBy(tasks['updateVersion'])
+
+task sourceJar(type: Jar) {
+  from sourceSets.main.allJava
+}
+
+publishing {
+  publications {
+    mavenJava(MavenPublication) {
+      groupId rootProject.group
+      artifactId moduleName
+
+      from components.java
+
+      artifact sourceJar {
+        classifier 'sources'
+      }
+    }
+  }
+}
+
+apply from: "${rootDir}/gradle/bintray.gradle"
