--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id 'de.undercouch.download' version '3.4.3' apply false
-    id 'com.jfrog.bintray' version '1.8.4' apply false
-    id 'org.sonarqube' version '2.7' apply false
+    id 'de.undercouch.download' version '3.4.3'
+    id 'com.jfrog.bintray' version '1.8.4'
+    id 'org.sonarqube' version '2.7'
 }
 
 allprojects {
